[gd_scene load_steps=24 format=2]

[ext_resource path="res://assets/logo.png" type="Texture" id=1]
[ext_resource path="res://Menu.gd" type="Script" id=2]
[ext_resource path="res://assets/scaleanimation.png" type="Texture" id=3]
[ext_resource path="res://assets/smallogo.png" type="Texture" id=4]
[ext_resource path="res://assets/Benegraphic.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/slider.png" type="Texture" id=6]
[ext_resource path="res://Settings.gd" type="Script" id=7]
[ext_resource path="res://View.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/campfire-crackles.ogg" type="AudioStream" id=9]
[ext_resource path="res://assets/eeriestart.mp3" type="AudioStream" id=10]
[ext_resource path="res://assets/eeriesloop.mp3" type="AudioStream" id=11]
[ext_resource path="res://assets/checkon.png" type="Texture" id=12]
[ext_resource path="res://assets/checkoff.png" type="Texture" id=13]

[sub_resource type="ParticlesMaterial" id=11]
emission_shape = 2
emission_box_extents = Vector3( 500, 1, 1 )
flag_disable_z = true
gravity = Vector3( 0, -10, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 30.0
scale_random = 0.32
color = Color( 0.0429688, 0.0429688, 0.0429688, 1 )

[sub_resource type="DynamicFont" id=1]
size = 31
extra_spacing_top = -6
extra_spacing_bottom = 1
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.513726, 0.227451, 0.172549, 1 )
border_width_right = 1
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.835294, 0.572549, 0.34902, 1 )
border_width_right = 1
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.156863, 0.101961, 0.105882, 1 )
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="DynamicFont" id=6]
size = 23
extra_spacing_top = -4
extra_spacing_bottom = -11
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 23
extra_spacing_top = -6
extra_spacing_bottom = -5
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=8]
default_font = SubResource( 7 )
Button/colors/font_color_hover = Color( 0.835294, 0.572549, 0.34902, 1 )
Button/fonts/font = SubResource( 1 )
Button/styles/disabled = SubResource( 2 )
Button/styles/focus = SubResource( 2 )
Button/styles/hover = SubResource( 2 )
Button/styles/normal = SubResource( 2 )
Button/styles/pressed = SubResource( 2 )
CheckButton/icons/off = ExtResource( 13 )
CheckButton/icons/on = ExtResource( 12 )
HSlider/icons/grabber = ExtResource( 6 )
HSlider/icons/grabber_disabled = ExtResource( 6 )
HSlider/icons/grabber_highlight = ExtResource( 6 )
HSlider/icons/tick = null
HSlider/styles/grabber_area = SubResource( 3 )
HSlider/styles/grabber_area_highlight = SubResource( 9 )
HSlider/styles/slider = SubResource( 5 )
Label/fonts/font = SubResource( 6 )

[sub_resource type="DynamicFont" id=10]
size = 22
extra_spacing_top = -6
extra_spacing_bottom = -5
font_data = ExtResource( 5 )

[node name="Menu" type="Node2D"]
script = ExtResource( 2 )
GameView = ExtResource( 8 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 530, 690 )
amount = 6
lifetime = 15.0
randomness = 0.97
process_material = SubResource( 11 )

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 754, 305 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="Smallogo" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 222, 62 )
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )

[node name="Scale" type="Sprite" parent="."]
position = Vector2( 153, 268 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
hframes = 9

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Menu" type="Node2D" parent="CanvasLayer"]
scale = Vector2( 3, 3 )

[node name="Settings" type="VBoxContainer" parent="CanvasLayer/Menu"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 168.333
margin_top = 10.3333
margin_right = 324.333
margin_bottom = 192.333
theme = SubResource( 8 )
custom_constants/separation = 2
script = ExtResource( 7 )

[node name="StartGame" type="Button" parent="CanvasLayer/Menu/Settings"]
margin_right = 156.0
margin_bottom = 28.0
text = "Start Game"

[node name="MusicLabel" type="Label" parent="CanvasLayer/Menu/Settings"]
margin_top = 30.0
margin_right = 156.0
margin_bottom = 40.0
text = "Music Volume"

[node name="Value" type="Label" parent="CanvasLayer/Menu/Settings/MusicLabel"]
margin_right = 156.0
margin_bottom = 14.0
text = "75%"
align = 2

[node name="MusicSlider" type="HSlider" parent="CanvasLayer/Menu/Settings"]
margin_top = 42.0
margin_right = 156.0
margin_bottom = 57.0
value = 75.0

[node name="SFXLabel" type="Label" parent="CanvasLayer/Menu/Settings"]
margin_top = 59.0
margin_right = 156.0
margin_bottom = 69.0
text = "SFX volume"

[node name="Value" type="Label" parent="CanvasLayer/Menu/Settings/SFXLabel"]
margin_right = 156.0
margin_bottom = 14.0
text = "75%"
align = 2

[node name="SFXSlider" type="HSlider" parent="CanvasLayer/Menu/Settings"]
margin_top = 71.0
margin_right = 156.0
margin_bottom = 86.0
value = 75.0

[node name="MouseLabel" type="Label" parent="CanvasLayer/Menu/Settings"]
margin_top = 88.0
margin_right = 156.0
margin_bottom = 98.0
text = "Mouse Sensitivity"

[node name="Value" type="Label" parent="CanvasLayer/Menu/Settings/MouseLabel"]
margin_right = 156.0
margin_bottom = 14.0
text = "75%"
align = 2

[node name="MouseSlider" type="HSlider" parent="CanvasLayer/Menu/Settings"]
margin_top = 100.0
margin_right = 156.0
margin_bottom = 115.0
min_value = 1.0
value = 32.0

[node name="FOVLabel" type="Label" parent="CanvasLayer/Menu/Settings"]
margin_top = 117.0
margin_right = 156.0
margin_bottom = 127.0
text = "Field of View"

[node name="Value" type="Label" parent="CanvasLayer/Menu/Settings/FOVLabel"]
margin_right = 156.0
margin_bottom = 14.0
text = "75%"
align = 2

[node name="FOVSlider" type="HSlider" parent="CanvasLayer/Menu/Settings"]
margin_top = 129.0
margin_right = 156.0
margin_bottom = 144.0
min_value = 30.0
max_value = 180.0
value = 70.0

[node name="FullScreen" type="CheckButton" parent="CanvasLayer/Menu/Settings"]
margin_top = 146.0
margin_right = 156.0
margin_bottom = 174.0
text = "Full Screen"

[node name="bottomlabels" type="Node2D" parent="CanvasLayer"]
scale = Vector2( 3, 3 )

[node name="Label" type="Label" parent="CanvasLayer/bottomlabels"]
margin_left = 2.0
margin_top = 199.333
margin_right = 119.0
margin_bottom = 213.333
custom_colors/font_color = Color( 0.156863, 0.101961, 0.105882, 1 )
custom_fonts/font = SubResource( 10 )
text = " jsloth & Skeleton Jelly"

[node name="Label2" type="Label" parent="CanvasLayer/bottomlabels"]
margin_left = 253.667
margin_top = 198.667
margin_right = 382.666
margin_bottom = 212.667
custom_colors/font_color = Color( 0.156863, 0.101961, 0.105882, 1 )
custom_fonts/font = SubResource( 10 )
text = "Music by krakenpine"
align = 2

[node name="sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
autoplay = true
bus = "sfx"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
bus = "music"

[node name="MusicLoop" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
bus = "music"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="pressed" from="CanvasLayer/Menu/Settings/StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="value_changed" from="CanvasLayer/Menu/Settings/MusicSlider" to="CanvasLayer/Menu/Settings" method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Menu/Settings/SFXSlider" to="CanvasLayer/Menu/Settings" method="_on_SFXSlider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Menu/Settings/MouseSlider" to="CanvasLayer/Menu/Settings" method="_on_MouseSlider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Menu/Settings/FOVSlider" to="CanvasLayer/Menu/Settings" method="_on_FOVSlider_value_changed"]
[connection signal="toggled" from="CanvasLayer/Menu/Settings/FullScreen" to="." method="_on_FullScreen_toggled"]
[connection signal="finished" from="Music" to="." method="_on_Music_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
